[package]
name = "pqc-combo"
version = "0.0.7"
edition = "2021"
description = "NIST Kyber L5 + Dilithium L3 + AES-256-GCM: no_std + no_alloc + std + alloc"
license = "MIT"
keywords = ["pqc", "kyber", "dilithium", "aes-gcm"]
categories = ["cryptography", "no-std", "embedded"]
repository = "https://github.com/AaronSchnacky1/pqc-combo"
readme = "README.md"
authors = ["Aaron Schnacky <aaronschnacky@gmail.com>"]
homepage = "https://www.aaronschnacky.com/"
documentation = "https://github.com/AaronSchnacky1/pqc-combo/blob/main/README.md"

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "SECURITY.md",
    "PQCkemKAT_3168.rsp",
    "PQCsignKAT_4016.rsp"
]

[lib]
name = "pqc_combo"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
# Add this line to disable default features when the library is compiled
# by default (e.g., when crates.io runs its checks).
default-features = false

[features]
default = []
aes-gcm = ["aes-gcm-crate"]
alloc = ["aes-gcm-crate/alloc"]
std = [
    "pqcrypto-kyber/std",
    "pqcrypto-dilithium/std",
    "rand_core/std",
    "zeroize/std",
    "alloc",
    "aes-gcm-crate/std",
]
# NEW: FIPS 140-3 mode enables automatic PCT on key generation
fips_140_3 = []
kat = ["std"]

[dependencies]
pqcrypto-kyber = { version = "0.8.1", default-features = false }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-traits = { version = "0.3.5", default-features = false }

zeroize = { version = "1.6", default-features = false, features = ["derive"] }
rand_core = { version = "0.6", default-features = false }

# AES-GCM
aes-gcm-crate = { version = "0.10.3", package = "aes-gcm", default-features = false, optional = true, features = ["aes"] }

# FIPS 202 Hash Functions (SHA3 family + SHAKE) for FIPS 140-3 CASTs
sha3 = { version = "0.10", default-features = false }

# Required for FFI
libc = "0.2"

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
hex = "0.4"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }

# Rust FFI test (no Python needed)
libloading = "0.8"

# Fuzzing (ready for post-publish)
libfuzzer-sys = "0.4"
arbitrary = "1.3"

# ----- INTEROP: Pure-Rust FIPS 203/204 (RustCrypto) -----
ml-kem = "0.1.0-rc.1"
ml-dsa = "0.1.0-rc.1"